--- a/contents.html
+++ b/contents.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../-- favicon/rocket-solid.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="-- favicon/rocket-solid.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Template</title>
+    <title>Document</title>
 </head>
 <body>
-   
-    <!-- Script -->
-    <script src="script.js"></script>
+    <h1>Menu of contents</h1>
+    <tr>
+        <td><a href="quote-generator/index.html">Quote Generator</a></td>
+    </tr>
 </body>
-</html> 
+</html>
