--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -7,10 +7,27 @@
     <link rel="shortcut icon" href="../-- favicon/rocket-solid.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Template</title>
+    <title>Quote Generator</title>
 </head>
 <body>
-   
+   <div class="quote-container" id="quote-container">
+    <!-- Quote -->
+    <div class="quote-text">
+        <i class="fa-solid fa-quote-left"></i>
+        <span id="quote">Коли ти кажеш, що зараз трішки пригальмуєш, то якраз це трапляється з твоїм життям.</span>
+    </div>
+    <!-- Author -->
+    <div class="quote-author">
+        <span id="author">Author Name</span>
+    </div>
+    <!-- Buttons -->
+    <div class="button-container">
+        <button class="twitter-button" id="twitter" title="Tweet This!">
+            <i class="fab fa-twitter"></i>
+        </button>
+        <button id="new-quote">New Quote</button>
+    </div>
+   </div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
