Added button functionalities

--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -14,11 +14,11 @@
     <!-- Quote -->
     <div class="quote-text">
         <i class="fa-solid fa-quote-left"></i>
-        <span id="quote">Коли ти кажеш, що зараз трішки пригальмуєш, то якраз це трапляється з твоїм життям.</span>
+        <span id="quote"></span>
     </div>
     <!-- Author -->
     <div class="quote-author">
-        <span id="author">Author Name</span>
+        <span id="author"></span>
     </div>
     <!-- Buttons -->
     <div class="button-container">
