finished Quote Generator

--- a/quote-generator/index.html
+++ b/quote-generator/index.html
@@ -10,7 +10,7 @@
     <title>Quote Generator</title>
 </head>
 <body>
-   <div class="quote-container" id="quote-container">
+    <div class="quote-container" id="quote-container">
     <!-- Quote -->
     <div class="quote-text">
         <i class="fa-solid fa-quote-left"></i>
@@ -27,7 +27,9 @@
         </button>
         <button id="new-quote">New Quote</button>
     </div>
-   </div>
+    </div>
+    <!-- Loader -->
+    <div class="loader"></div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
