--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>Menu of contents</h1>
     <tr>
         <td><a href="quote-generator/index.html">Quote Generator</a></td>
+        <td><a href="infinite-scroll/index.html">Infinite Scroll</a></td>
     </tr>
 </body>
 </html>
