infinite scroll finished

--- a/infinite-scroll/index.html
+++ b/infinite-scroll/index.html
@@ -13,7 +13,7 @@
     <!-- Title -->
     <h1>Infinite Scroll </h1>
     <!-- Loader -->
-    <div  class="loader hidden" id="loader">
+    <div  class="loader" id="loader">
         <img src="img/loader.svg" alt="loader">
     </div>
     <!-- Image Container -->
