changed menu table to list

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <h1>Menu of contents</h1>
-    <tr>
-        <td><a href="quote-generator/index.html">Quote Generator</a></td>
-        <td><a href="infinite-scroll/index.html">Infinite Scroll</a></td>
-    </tr>
+    <ul>
+        <li><a href="quote-generator/index.html">Quote Generator</a></li>
+        <li><a href="infinite-scroll/index.html">Infinite Scroll</a></li>
+    </ul>
 </body>
 </html>
