picture in picture project added

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="shortcut icon" href="-- favicon/rocket-solid.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Menu of contents</title>
 </head>
 <body>
     <h1>Menu of contents</h1>
     <ul>
         <li><a href="quote-generator/index.html">Quote Generator</a></li>
         <li><a href="infinite-scroll/index.html">Infinite Scroll</a></li>
+        <li><a href="picture-in-picture/index.html">Oicture in Picture</a></li>
     </ul>
 </body>
 </html>
