joke tellere finished

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <ul>
         <li><a href="quote-generator/index.html">Quote Generator</a></li>
         <li><a href="infinite-scroll/index.html">Infinite Scroll</a></li>
-        <li><a href="picture-in-picture/index.html">Oicture in Picture</a></li>
+        <li><a href="picture-in-picture/index.html">Picture in Picture</a></li>
+        <li><a href="joke-teller/">Joke Teller</a></li>
     </ul>
 </body>
 </html>
