--- a/index.html
+++ b/index.html
@@ -6,16 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="-- favicon/rocket-solid.svg" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
     <title>Menu of contents</title>
 </head>
 <body>
-    <h1>Menu of contents</h1>
-    <ul>
-        <li><a href="quote-generator/index.html">Quote Generator</a></li>
-        <li><a href="infinite-scroll/index.html">Infinite Scroll</a></li>
-        <li><a href="picture-in-picture/index.html">Picture in Picture</a></li>
-        <li><a href="joke-teller/">Joke Teller</a></li>
-    </ul>
+    <div class="container">
+        <div class="hero-container">
+            <h1>Javascripts projects</h1>
+            <p class="hero-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam reprehenderit consequuntur iusto quod rem nobis dolor vel magni, impedit facilis minus excepturi ipsam eligendi! Iste voluptas nihil ipsa ad, ratione maiores corporis odio labore voluptatibus! Ratione, totam excepturi! Autem debitis labore molestiae ab quae atque nemo beatae tempore vel suscipit cumque obcaecati rem sint libero dicta inventore ipsam laudantium in, repellendus, facere, exercitationem animi? Vitae, a, similique adipisci mollitia nesciunt exercitationem reprehenderit expedita tempora, fugiat repellat laboriosam? Illum placeat molestias aliquam minus ab repellendus magni fugit, ratione dolorum at libero omnis aliquid aspernatur nemo iste maxime molestiae cum unde officiis.</sub>
+            </p>
+        </div>
+        <div class="items-container">
+            <div class="row">
+                <div class="item">
+                    <img src="img/quote.png" alt="">
+                    <div class="item-inner">
+                        <h3>Quote Generator</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
+                        <a href="quote-generator/index.html" target="_blank">Quote Generator</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/scroll.png" alt="">
+                    <div class="item-inner">
+                        <h3>Infinite Scroll</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
+                        <a href="infinite-scroll/index.html" target="_blank">Infinite Scroll</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="item">
+                    <img src="img/picture.png" alt="">
+                    <div class="item-inner">
+                        <h3>Picture in Picture</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
+                        <a href="picture-in-picture/index.html" target="_blank">Picture in Picture</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/joke.png" alt="">
+                    <div class="item-inner">
+                        <h3>Joke Teller</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
+                        <a href="joke-teller/index.html" target="_blank">Joke Teller</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="item">
+                    <div class="item-inner">
+                        <h3>Light and Dark Theme</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
+                        <a href="light-dark-mode/index.html" target="_blank">Light & Dark Mode</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
