--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             </div>
             <div class="row">
                 <div class="item">
+                    <img src="img/darkLight.png" alt="">
                     <div class="item-inner">
                         <h3>Light and Dark Theme</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
