--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="item-inner">
                         <h3>Quote Generator</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
-                        <a href="quote-generator/index.html" target="_blank">Quote Generator</a>
+                        <a href="quote-generator/index.html" target="_blank">See project</a>
                     </div>
                 </div>
                 <div class="item">
@@ -31,7 +31,7 @@
                     <div class="item-inner">
                         <h3>Infinite Scroll</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
-                        <a href="infinite-scroll/index.html" target="_blank">Infinite Scroll</a>
+                        <a href="infinite-scroll/index.html" target="_blank">See project</a>
                     </div>
                 </div>
             </div>
@@ -41,7 +41,7 @@
                     <div class="item-inner">
                         <h3>Picture in Picture</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
-                        <a href="picture-in-picture/index.html" target="_blank">Picture in Picture</a>
+                        <a href="picture-in-picture/index.html" target="_blank">See project</a>
                     </div>
                 </div>
                 <div class="item">
@@ -49,7 +49,7 @@
                     <div class="item-inner">
                         <h3>Joke Teller</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
-                        <a href="joke-teller/index.html" target="_blank">Joke Teller</a>
+                        <a href="joke-teller/index.html" target="_blank">See project</a>
                     </div>
                 </div>
             </div>
@@ -59,7 +59,15 @@
                     <div class="item-inner">
                         <h3>Light and Dark Theme</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
-                        <a href="light-dark-mode/index.html" target="_blank">Light & Dark Mode</a>
+                        <a href="light-dark-mode/index.html" target="_blank">See project</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/darkLight.png" alt="">
+                    <div class="item-inner">
+                        <h3>Animated Template</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
+                        <a href="animated-template/index.html" target="_blank">See project</a>
                     </div>
                 </div>
             </div>
