--- a/index.html
+++ b/index.html
@@ -63,9 +63,27 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="img/darkLight.png" alt="">
+                    <img src="img/animated-template.png" alt="">
                     <div class="item-inner">
                         <h3>Animated Template</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
+                        <a href="animated-template/index.html" target="_blank">See project</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="item">
+                    <img src="img/animated-template.png" alt="">
+                    <div class="item-inner">
+                        <h3>Animated Navigation</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
+                        <a href="animated-navigation/index.html" target="_blank">See project</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/darkLight.png" alt="">
+                    <div class="item-inner">
+                        <h3>Some project</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
                         <a href="animated-template/index.html" target="_blank">See project</a>
                     </div>
