--- a/light-dark-mode/index.html
+++ b/light-dark-mode/index.html
@@ -29,7 +29,7 @@
 <!-- Home Section -->
 <section id="home">
     <div class="title-group">
-        <h1>Custom Title Here</h1>
+        <h1>Try to change mode</h1>
         <h2>Welcome to the website</h2>
     </div>
 </section>
