animated navigation: my version

--- a/animated-navigation/index.html
+++ b/animated-navigation/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!-- Menu Overlay -->
-  <div class="overlay">
+  <div class="overlay" >
     <!-- Menu Items -->
     <nav>
       <ul>
@@ -21,6 +21,13 @@
       </ul>
     </nav>
   </div>
+  <!-- Menu -->
+    <input type="checkbox" id="menu-icon">
+    <label class="menu" for="menu-icon">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </label>
   <!-- Sections -->
   <section id="home"><a href="https://jacinto.design" target="_blank">Javascript projects</a></section>
   <section id="about"><h1>Learn More About Me</h1></section>
