navigation animation finished

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
             <div class="row">
                 <div class="item">
-                    <img src="img/animated-template.png" alt="">
+                    <img src="img/navigation.png" alt="">
                     <div class="item-inner">
                         <h3>Animated Navigation</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
