music player finished

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="img/darkLight.png" alt="">
+                    <img src="img/audioplayer.png" alt="">
                     <div class="item-inner">
-                        <h3>Some project</h3>
+                        <h3>Music Player</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
-                        <a href="animated-template/index.html" target="_blank">See project</a>
+                        <a href="music-player/index.html" target="_blank">See project</a>
                     </div>
                 </div>
             </div>
