--- a/index.html
+++ b/index.html
@@ -73,6 +73,24 @@
             </div>
             <div class="row">
                 <div class="item">
+                    <img src="img/countdown.png" alt="">
+                    <div class="item-inner">
+                        <h3>Custom Countdown</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
+                        <a href="custom-countdown/index.html" target="_blank">See project</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/audioplayer.png" alt="">
+                    <div class="item-inner">
+                        <h3>Coming Soon</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
+                        <a href="music-player/index.html" target="_blank">See project</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="item">
                     <img src="img/navigation.png" alt="">
                     <div class="item-inner">
                         <h3>Animated Navigation</h3>
