--- a/index.html
+++ b/index.html
@@ -97,11 +97,29 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="img/audioplayer.png" alt="">
+                    <img src="img/bookmarks.png" alt="">
                     <div class="item-inner">
-                        <h3>Coming Soon</h3>
+                        <h3>Bookmarks keeper</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
-                        <a href="music-player/index.html" target="_blank">See project</a>
+                        <a href="book-keeper/" target="_blank">See project</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="item">
+                    <img src="img/countdown.png" alt="">
+                    <div class="item-inner">
+                        <h3>Form Validation</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
+                        <a href="form-validation/index.html" target="_blank">See project</a>
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="img/bookmarks.png" alt="">
+                    <div class="item-inner">
+                        <h3>Bookmarks keeper</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestias molestiae et, numquam ipsam ab corporis cupiditate velit nihil dolorum atque laboriosam saepe minus exercitationem.</p>
+                        <a href="book-keeper/" target="_blank">See project</a>
                     </div>
                 </div>
             </div>
