old solution for volume

--- a/video-player/index.html
+++ b/video-player/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="video-container">
-        <video><source src="guitar.mp4"></video>
+        <video loop><source src="guitar.mp4"></video>
         <div class="hover-info">
             <div class="title-container">
                 <i class="fa-solid fa-video"></i><h3>Video Title</h3> 
@@ -37,7 +37,7 @@
                         <div class="volume-container control">
                             <i class="fa-solid fa-volume-high volume" id="volume-icon"></i>
                             <div class="indicator-container" id="volumeline-container">
-                                <input type="range">
+                                <input type="range" id="volume-range">
                             </div>
                         </div>
                     </div>
