volume-mute solution 1

--- a/video-player/index.html
+++ b/video-player/index.html
@@ -34,7 +34,7 @@
                     <div class="left">
                         <i class="fa-solid fa-play control" id="play"></i>
 
-                        <div class="volume-container control">
+                        <div class="volume-container control" id="volume-container">
                             <i class="fa-solid fa-volume-high volume" id="volume-icon"></i>
                             <div class="indicator-container" id="volumeline-container">
                                 <input type="range" id="volume-range">
