finished my version of video player

--- a/video-player/index.html
+++ b/video-player/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <div class="video-container">
-        <video loop><source src="guitar.mp4"></video>
-        <video loop class="fake-video"><source src="guitar.mp4" ></video>
-        <div class="hover-info" id="hover-info">
+        <video><source src="guitar.mp4"></video>
+        <video class="fake-video"><source src="guitar.mp4" ></video>
+        <div class="hover-info" id="hover-info" hidden>
             <div class="title-container">
                 <i class="fa-solid fa-video"></i><h3>Video Title</h3> 
             </div>
@@ -54,7 +54,7 @@
                             <p>1.0x</p>
                             <i class="fa-solid fa-chevron-down"></i>
                         </div>
-                        <div class="speed-dropdown" id="speed-dropdown">
+                        <div class="speed-dropdown" id="speed-dropdown" hidden>
                             <p class="control">0.25x</p>
                             <p class="control">0.5x</p>
                             <p class="control">0.75x</p>
