--- a/spock-rock-game/index.html
+++ b/spock-rock-game/index.html
@@ -18,11 +18,11 @@
     
         <div class="player-container player" id="player">
             <h2>You - <span id="player-score">0</span><span class="choice" id="player-choice"></span></h2>
-            <i class="fa-regular fa-hand-back-fist" title="Rock" id="player-rock" onclick="select('rock')"></i>
-            <i class="fa-regular fa-hand" title="Paper" id="player-paper" onclick="select('paper')"></i>
-            <i class="fa-regular fa-hand-scissors" title="Scissors" id="player-scissors" onclick="select('scissors')"></i>
-            <i class="fa-regular fa-hand-lizard" title="Lizard" id="player-lizard" onclick="select('lizard')"></i>
-            <i class="fa-regular fa-hand-spock" title="Spock" id="player-spock" onclick="select('spock')"></i>
+            <i class="fa-regular fa-hand-back-fist" title="Rock" id="player-rock" onclick="select(event,'rock')"></i>
+            <i class="fa-regular fa-hand" title="Paper" id="player-paper" onclick="select(event,'paper')"></i>
+            <i class="fa-regular fa-hand-scissors" title="Scissors" id="player-scissors" onclick="select(event,'scissors')"></i>
+            <i class="fa-regular fa-hand-lizard" title="Lizard" id="player-lizard" onclick="select(event,'lizard')"></i>
+            <i class="fa-regular fa-hand-spock" title="Spock" id="player-spock" onclick="select(event,'spock')"></i>
         </div>
 
         <div class="player-container computer" id="computer">
