rock-spock game finished

--- a/spock-rock-game/index.html
+++ b/spock-rock-game/index.html
@@ -18,7 +18,7 @@
 
     <div class="game-container">
         <div class="result-container">
-            <h3 class="result-text" id="result-text">let's battle!</h3>
+            <h3 class="result-text" id="result-text">Choose your hand!</h3>
         </div>
     
         <div class="player-container player" id="player">
@@ -39,8 +39,8 @@
             <i class="fa-regular fa-hand-spock" title="Spock" data-type="spock"></i>
         </div>
 
-        <div class="reset-container" hidden>
-            <i class="fa-solid fa-rotate reset-icon" title="Reset" id="reset"></i>
+        <div class="reset-container" id="reset" >
+            <i class="fa-solid fa-rotate reset-icon" title="Reset" ></i>
             <h3>restart game</h3>    
         </div>
         
@@ -53,7 +53,6 @@
         <h1>Rock • Paper • Scissors • Lizard • Spock • </h1>
     </div>
     <!-- Script -->
-    <script src="confetti.js"></script>
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
