--- a/drag-and-drop/index.html
+++ b/drag-and-drop/index.html
@@ -14,15 +14,31 @@
     <div class="boards-container">
 
         <div class="board">
+
             <div class="board-header">
-                <h3>Backlog<span class="card-counter">1</span></h3>
-                <!-- <i title="Add card" class="fa-solid fa-plus"></i> -->
+                <h3>Backlog<span class="card-counter">0</span></h3>
+            </div>
+
+            <div class="cards">
+            </div>
+
+            <p class="add-text">+ Add card</p>
+                
+            <div class="editor hidden">
+                <textarea class="card" placeholder="Start typing..." dragable></textarea>
+                <small class="error-text hidden">Enter some text</small>
+                <div class="buttons">
+                    <button class="add-btn">Add card</button><button class="secondary dismiss-btn">Dismiss</button>
+                </div>
+            </div>  
+        </div>
+
+        <div class="board">
+            <div class="board-header">
+                <h3>In progress<span class="card-counter">0</span></h3>
             </div>
             <div class="cards">
-                <div class="card" draggable="true">
-                    <p>Finish kanban board project</p>
-                 </div>
-                 <p class="add">+ Add card</p>
+                 <p class="add-text">+ Add card</p>
                  <div class="add-card hidden" id="addCard">
                     <textarea class="card" rows="8" placeholder="Start typing..."></textarea>
                     <button>Add card</button> <button class="secondary">Dismiss</button>
@@ -32,15 +48,11 @@
 
         <div class="board">
             <div class="board-header">
-                <h3>In progress<span class="card-counter">1</span></h3>
-                <!-- <i title="Add card" class="fa-solid fa-plus"></i> -->
+                <h3>Complete<span class="card-counter">0</span></h3>
             </div>
             <div class="cards">
-                <div class="card" draggable="true">
-                    <p>Finish kanban board project</p>
-                 </div>
-                 <p class="add">+ Add card</p>
-                 <div class="add-card hidden" id="addCard">
+                 <p class="add-text">+ Add card</p>
+                 <div class="add-card hidden" id="addCardContainer">
                     <textarea class="card" rows="8" placeholder="Start typing..."></textarea>
                     <button>Add card</button> <button class="secondary">Dismiss</button>
                  </div>
@@ -49,31 +61,10 @@
 
         <div class="board">
             <div class="board-header">
-                <h3>Complete<span class="card-counter">1</span></h3>
-                <!-- <i title="Add card" class="fa-solid fa-plus"></i> -->
+                <h3>On hold<span class="card-counter">0</span></h3>
             </div>
             <div class="cards">
-                <div class="card" draggable="true">
-                    <p>Finish kanban board project</p>
-                 </div>
-                 <p class="add">+ Add card</p>
-                 <div class="add-card hidden" id="addCard">
-                    <textarea class="card" rows="8" placeholder="Start typing..."></textarea>
-                    <button>Add card</button> <button class="secondary">Dismiss</button>
-                 </div>
-            </div>
-        </div>
-
-        <div class="board">
-            <div class="board-header">
-                <h3>On hold<span class="card-counter">1</span></h3>
-                <!-- <i title="Add card" class="fa-solid fa-plus"></i> -->
-            </div>
-            <div class="cards">
-                <div class="card" draggable="true">
-                    <p>Finish kanban board project</p>
-                 </div>
-                 <p class="add">+ Add card</p>
+                 <p class="add-text" onclick="openEditor">+ Add card</p>
                  <div class="add-card hidden" id="addCard">
                     <textarea class="card" rows="8" placeholder="Start typing..."></textarea>
                     <button>Add card</button> <button class="secondary">Dismiss</button>
