--- a/calculator/index.html
+++ b/calculator/index.html
@@ -3,12 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
+    <title>Calculator    </title>
     <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="calculator">
+        <div class="calculator-display">
+            <h1>0</h1>
+        </div>
+        <div class="calculator-buttons">
+            <button class="operator" value="+" onclick="update('+')">+</button>
+            <button class="operator" value="-" onclick="update('-')">-</button>
+            <button class="operator" value="*" onclick="update('*')">×</button>
+            <button class="operator" value="/" onclick="update('/')">÷</button>
+            <button value="7" onclick="formValue('7')">7</button>
+            <button value="8" onclick="formValue('8')">8</button>
+            <button value="9" onclick="formValue('9')">9</button>
+            <button value="4" onclick="formValue('4')">4</button>
+            <button value="5" onclick="formValue('5')">5</button>
+            <button value="6" onclick="formValue('6')">6</button>
+            <button value="1" onclick="formValue('1')">1</button>
+            <button value="2" onclick="formValue('2')">2</button>
+            <button value="3" onclick="formValue('3')">3</button>
+            <button class="decimal" value="." onclick="formValue('.')">.</button>
+            <button value="0" onclick="formValue('0')">0</button>
+            <button class="clear" id="clear-btn" onclick="setDefault()">C</button>
+            <button class="equal-sign operator" value="=" onclick="sumUp()">=</button>
+        </div>
+    </div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
